--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Mate+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Figtree&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -66,7 +69,6 @@
     --destructive-foreground: 210 40% 98%;
 
     --ring: none;
-
   }
 }
 
@@ -75,7 +77,14 @@
     @apply border-border;
   }
 
+  /* Set global body font to Figtree */
   body {
     @apply bg-background text-foreground;
+    font-family: 'Figtree', sans-serif;
+  }
+
+  /* Set all headings to Mate SC */
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'Mate SC', serif;
   }
 }
